[FIX] partner_autocomplete: auto suggestion box cut on small device
Partner autocomplete suggestion popup cropped from the top in small devices.
once you type anything in M2O box, autocomplete popup will display with all
maximum possibilities consist of the database records and records got from
global search partner API.

Currently, we have limit of database record search is 7 and autocomplete
display maximum 16 items databse records + API generated records.
So with this commit, we have reduced the API record display limit for small
devices, based on height it will display number of items in autocomplete box,
this will reduce chance of cropped issue.

Task:2206844

X-original-commit: ded375786557ae6c7680409faa32cbe3a4e30e99

--- a/addons/partner_autocomplete/static/src/scss/partner_autocomplete.scss
+++ b/addons/partner_autocomplete/static/src/scss/partner_autocomplete.scss
@@ -44,3 +44,25 @@
         color: white !important;
     }
 }
+
+@media (max-height: 700px) {
+    .ui-autocomplete.o_partner_autocomplete_dropdown {
+        > .ui-menu-item:nth-of-type(1n+13) {
+            display: none;
+        }
+    }
+}
+@media (max-height: 620px) {
+    .ui-autocomplete.o_partner_autocomplete_dropdown {
+        > .ui-menu-item:nth-of-type(1n+12) {
+            display: none;
+        }
+    }
+}
+@media (max-height: 570px) {
+    .ui-autocomplete.o_partner_autocomplete_dropdown {
+        > .ui-menu-item:nth-of-type(1n+11) {
+            display: none;
+        }
+    }
+}
